--- a/DevNet-Professional/DevOps/docker/labs/lab16/playbooks/templates/filebeat.yml.j2
+++ b/DevNet-Professional/DevOps/docker/labs/lab16/playbooks/templates/filebeat.yml.j2
@@ -90,7 +90,7 @@ setup.template.settings:
 
 # The tags of the shipper are included in their own field with each
 # transaction published.
-#tags: ["service-X", "web-tier"]
+tags: ["docker", "{{ inventory_hostname }}"]
 
 # Optional fields that you can specify to add additional information to the
 # output.
@@ -120,7 +120,7 @@ setup.kibana:
   # Scheme and port can be left out and will be set to the default (http and 5601)
   # In case you specify and additional path, the scheme is required: http://localhost:5601/path
   # IPv6 addresses should always be defined as: https://[2001:db8::1]:5601
-  host: "localhost:5601"
+  host: "192.168.10.10:5601"
 
   # Kibana Space ID
   # ID of the Kibana Space into which the dashboards should be loaded. By default,
@@ -147,7 +147,7 @@ setup.kibana:
 #-------------------------- Elasticsearch output ------------------------------
 output.elasticsearch:
   # Array of hosts to connect to.
-  hosts: ["localhost:9200"]
+  hosts: ["192.168.10.10:9200"]
 
   # Optional protocol and basic auth credentials.
   #protocol: "https"
